--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -19,7 +19,7 @@ subtitle = ""
 [sidebar.avatar]
 enabled = true
 local = true
-src = "img/avatar.png"
+src = "img/avatar.jpeg"
 
 [article]
 headingAnchor = false
